[gd_scene load_steps=3 format=3 uid="uid://c7iskwgu5aphr"]

[ext_resource type="Script" uid="uid://jyq8m6xvaq3t" path="res://example_godot/examples-pkarr/main.gd" id="1_tb2l5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yylx1"]
bg_color = Color(0.1882353, 0.007843138, 0.2, 1)

[node name="main" type="Control" unique_id=1492347608]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tb2l5")

[node name="Panel" type="Panel" parent="." unique_id=538950678]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yylx1")

[node name="GridContainer" type="GridContainer" parent="." unique_id=1054610812]
layout_mode = 0
offset_left = 41.0
offset_top = 52.0
offset_right = 177.0
offset_bottom = 92.0
columns = 2

[node name="key_nostr" type="Button" parent="GridContainer" unique_id=983901319]
visible = false
layout_mode = 2
disabled = true
text = "key nostr"

[node name="pkarr" type="Button" parent="GridContainer" unique_id=500583830]
layout_mode = 2
text = "pkarr"

[node name="LineEdit" type="LineEdit" parent="." unique_id=1264832779]
layout_mode = 0
offset_left = 29.0
offset_top = 98.0
offset_right = 218.0
offset_bottom = 129.0
placeholder_text = "enter pass storage key"

[node name="crear" type="Button" parent="." unique_id=1210058322]
layout_mode = 0
offset_left = 229.0
offset_top = 89.0
offset_right = 304.0
offset_bottom = 138.0
text = "crear"

[node name="Button" type="Button" parent="." unique_id=214895583]
layout_mode = 0
offset_left = 954.0
offset_top = 23.0
offset_right = 1084.0
offset_bottom = 78.0
text = "quit"

[connection signal="pressed" from="GridContainer/key_nostr" to="." method="_on_key_nostr_pressed"]
[connection signal="pressed" from="GridContainer/pkarr" to="." method="_on_pkarr_pressed"]
[connection signal="pressed" from="crear" to="." method="_on_crear_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
